package Tarea_S8.Ejercicio4;

public class Voto {
    private int idCandidata;

    public Voto(int idCandidata) {
        this.idCandidata = idCandidata;
    }

    public int getIdCandidata() {
        return idCandidata;
    }
}
