package Tarea_S8.Ejercicio4;

public class candidataDatoInvalidoException extends Exception {
    public candidataDatoInvalidoException(String mensaje){
        super(mensaje);
    }
}
